# gst-plugins-bad

./: configure.ac
docs/libs/: gst-plugins-bad-libs-docs.sgml  gst-plugins-bad-libs-sections.txt
ext/: Makefile.am
ext/vapoursynth/: Makefile.am  gstvapoursynth.c  gstvapoursynth.h
gst-libs/gst/: Makefile.am
gst-libs/gst/base/: gstaggregator.c  gstaggregator.h
gst-libs/gst/video/: gstvideoaggregator.c  gstvideoaggregator.h
gst/audiomixer/: gstaudiomixer.c
gst/compositor/: Makefile.am  blend.c  compositor.c  compositor.h  compositororc-dist.c  compositororc-dist.h  compositororc.h  compositororc.orc  compositorpad.h
gst/compositor/videoaggregator/: gstvideoaggregator.c  gstvideoaggregator.h
gst/framecache/: Makefile.am  README.md  gstframecache.c  gstframecache.h  smooth_seek.scenario
gst/frei0r/: Makefile.am  gstfrei0r.c  gstfrei0rfilter.c  gstfrei0rsrc.c  gstfrei0rsrc.h
gst/livesourcewrapper/: Makefile.am  gstlivesourcewrapper.c  gstlivesourcewrapper.h
gst/mpegtsdemux/: mpegtsbase.c  mpegtsbase.h  mpegtspacketizer.c  tsdemux.c  tsdemux.h
gst/mxf/: mxfdemux.c
gst/videomeasure/: Makefile.am  gstvideomeasure_ssim.c  gstvideomeasure_ssim.h
gst/videomeasure/basemixer/: gstbasemixer.c  gstbasemixer.h
gst/videomixer/: Makefile.am  videomixer2.c  videomixerorc.h
gst/videomixer/basemixer/: gstbasemixer.c  gstbasemixer.h  gstbasemixerpad.h
tests/check/: Makefile.am
tests/check/elements/: audiomixer.c  videomixer.c
tests/check/libs/: aggregator.c
